# barnacle

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
barnacle/: __init__.py  decomposition.py  fista.py  tensors.py  utils.py
barnacle/tests/: test_decomposition.py  test_fista.py
container/: build_docker_image.sh  build_singularity_image.sh  requirements.txt
docs/: about_barnacle.rst  api.rst  conf.py  examples.rst  index.rst  installation.rst  model.rst  omics.rst  references.bib
docs/autodoc/: barnacle.rst
docs/notebooks/: cross-validation.ipynb  decomposition.ipynb  evaluate-model.ipynb  simulated-data.ipynb
docs/source/: barnacle.rst  modules.rst
examples/: omics.rst
ncistd/: __init__.py  decomposition.py  fista.py  new_sim.py  simulation.py  tensors.py  utils.py
ncistd/tests/: test_decomposition.py
tesorcluster/: simulation.py  utils.py
