[metadata]
name = TensorCluster
version = 0.0.1
author = Stephen Blaskowski
author_email = stephen.blaskowski@gmail.com
description = Python package for developing clustering methods that work for tensor structured data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/blasks/TensorCluster
project_urls =
    Bug Tracker = https://github.com/blasks/TensorCluster/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
