[metadata]
name = ncistd
version = 0.0.1
author = Stephen Blaskowski
author_email = stephen.blaskowski@gmail.com
description = Python package for developing clustering methods that work for tensor structured data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/blasks/ncistd
project_urls =
    Bug Tracker = https://github.com/blasks/ncistd/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
